[gd_scene load_steps=6 format=3 uid="uid://u3msuwk1weqp"]

[ext_resource type="Script" uid="uid://bu5n4aactisve" path="res://scenes/components/pawn.gd" id="1_jgl5h"]
[ext_resource type="PackedScene" uid="uid://c5chrmltlwc58" path="res://scenes/components/input/holder.tscn" id="2_ei5j0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_58uyk"]
radius = 31.0

[sub_resource type="LabelSettings" id="LabelSettings_ei5j0"]
line_spacing = 0.0
font_size = 48
font_color = Color(1, 1, 1, 0.415686)

[sub_resource type="LabelSettings" id="LabelSettings_58uyk"]
font_size = 48

[node name="Pawn" type="Node2D"]
script = ExtResource("1_jgl5h")

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_58uyk")
debug_color = Color(4.57242e-06, 0.625302, 0.521403, 0.42)

[node name="IconShadow" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -33.5
offset_right = 33.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "âš«"
label_settings = SubResource("LabelSettings_ei5j0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "ðŸ’€"
label_settings = SubResource("LabelSettings_58uyk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Holder" parent="." node_paths=PackedStringArray("area") instance=ExtResource("2_ei5j0")]
position = Vector2(-1, 49)
area = NodePath("../Area2D")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="hold_canceled" from="Holder" to="." method="_on_holder_hold_canceled"]
[connection signal="hold_completed" from="Holder" to="." method="_on_holder_hold_completed"]
